# PulsoDigital

./: .gitignore  AGENTS.md  README.md  docker-compose.ec2.yml  docker-compose.env.example  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: audit.py  auth.py  chat_reports.py  dashboard.py  interventions.py  notifications.py  responses.py  risk.py  router.py  students.py  surveys.py  wellbeing.py
backend/app/chat/: config.py  llm.py  memory.py  router.py  schemas.py  service.py
backend/app/core/: base.py  config.py  database.py  exceptions.py  logging.py  security.py
backend/app/ml/: __init__.py  feature_builder.py  model_loader.py  predictor.py  router.py  schemas.py
backend/app/ml/config/: rf_config.json
backend/app/models/: __init__.py  base.py
backend/app/schemas/: auth.py  student.py  survey.py  user.py
backend/app/services/: regression.py  risk_detection.py  wellbeing.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_add_daily_checkins.py  003_add_chat_reports.py
backend/ml/: models.py  train.py
backend/scripts/: create_daily_checkins.sql  seed.py  seed_daily_checkins.py
backend/tests/: conftest.py  test_api.py
frontend/: .gitignore  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LoadingScreen.tsx  MLPipelineAnimation.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/layouts/: PsychologistLayout.tsx  StudentLayout.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Landing.tsx
frontend/src/pages/auth/: Login.tsx
frontend/src/psychologist/pages/: PsychologistAlerts.tsx  PsychologistChatReports.tsx  PsychologistDashboard.tsx  PsychologistInterventions.tsx  PsychologistStudentDetail.tsx  PsychologistStudents.tsx
frontend/src/store/: authStore.ts
frontend/src/student/components/: Chatbot.tsx  DailyCheckin.tsx
frontend/src/student/pages/: StudentCheckin.tsx  StudentDashboard.tsx  StudentHistory.tsx  StudentSupport.tsx
