[project]
name = "pulso-digital-backend"
version = "0.1.0"
description = "Backend API for Pulso Digital - School Wellbeing Monitoring Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.29",
    "asyncpg==0.29.0",
    "pydantic==2.7.0",
    "pydantic-settings==2.3.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.1",
    "pydantic-extra-types==2.6.0",
    "httpx==0.27.0",
    "email-validator==2.1.0",
    "pytz==2024.1",
    "python-dateutil==2.9.0",
    "structlog==24.1.0",
    "prometheus-client==0.19.0",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "redis==5.0.1",
    "celery==5.4.0",
    "flower==2.0.1",
]
[project.optional-dependencies]
ml = [
    "scikit-learn==1.4.2",
    "xgboost==2.0.3",
    "pandas==2.2.1",
    "numpy==1.26.4",
    "joblib==1.4.2",
    "scipy==1.13.0",
]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.3",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.4.0",
    "mypy==1.9.0",
    "pre-commit==3.7.0",
]
dev-ml = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.3",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.4.0",
    "mypy==1.9.0",
    "pre-commit==3.7.0",
    "scikit-learn==1.4.2",
    "xgboost==2.0.3",
    "pandas==2.2.1",
    "numpy==1.26.4",
    "joblib==1.4.2",
    "scipy==1.13.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ml*", "migrations*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "W", "C90", "ANN", "B", "C4", "DTZ", "T20", "SIM", "ARG", "PTH", "ERA", "PL", "TRY", "NPY", "PERF", "RET", "SLF", "TID", "TCH", "INT", "FIX", "FLY", "LOG", "N", "Q", "RSE", "RUF", "TD", "TRY"]
ignore = ["S101", "S106", "S311", "B008", "B011", "B012", "PLW0603", "C901"]
per-file-ignores = { "tests/*" = ["S101", "S106", "S311", "PLW0603"], "tests/conftest.py" = ["S101", "S106", "S311", "PLW0603", "ARG001", "ARG002"] }
src = ["backend/app", "backend/ml"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_reexport = true
strict = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
files = ["backend/app", "backend/ml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["backend/app", "backend/ml"]
omit = ["*/tests/*", "*/migrations/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
